# agentic-plugins

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
adk-builder/: README.md
adk-builder/.claude-plugin/: plugin.json
adk-builder/agents/: adk-debugger.md
adk-builder/commands/: adk-add-behavior.md  adk-add-memory.md  adk-add-tool.md  adk-create-agent.md  adk-debug.md  adk-deploy.md  adk-init.md  adk-multi-agent.md  adk-secure.md  adk-streaming.md  adk-test.md  adk.md
adk-builder/scripts/: init-spec.sh  validate-spec.py
adk-builder/skills/adk-advanced/: SKILL.md
adk-builder/skills/adk-core/: SKILL.md
adk-builder/skills/adk-orchestration/: SKILL.md
plugins/adk-builder/: README.md
plugins/adk-builder/.claude-plugin/: plugin.json
plugins/adk-builder/agents/: adk-debugger.md  adk-executor.md  adk-planner.md
plugins/adk-builder/commands/: adk-debug.md  adk.md
plugins/adk-builder/docs/plans/: 2026-01-10-plugin-redesign.md  2026-01-11-subagent-implementation.md
plugins/adk-builder/evals/: PLAN.md
plugins/agentic-builder/: CLAUDE.md
plugins/agentic-builder/.claude-plugin/: plugin.json
plugins/agentic-builder/agents/: agent-debugger.md  agent-executor.md  agent-planner.md
plugins/agentic-builder/commands/: agent.md  agentic.md
plugins/agentic-builder/hooks/: hooks.json  pre-compact.sh  session-start.sh
plugins/agentic-builder/mcp-server/: pyproject.toml
plugins/agentic-builder/mcp-server/src/agentic_rag_server/: __init__.py  server.py
plugins/agentic-builder/templates/: plan.md  spec.md
(+12 files in other folders)
