[project]
name = "agentic-rag-server"
version = "1.0.0"
description = "MCP server for agentic framework RAG queries"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "qdrant-client>=1.7.0",
    "voyageai>=0.2.0",
    "fastembed>=0.2.0",
    "pydantic>=2.0.0",
]

[project.scripts]
agentic-rag-server = "agentic_rag_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag_server"]
